--- a/angular.json
+++ b/angular.json
@@ -36,8 +36,7 @@
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.scss"
             ],
-            "scripts": [],
-            "localize": true
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -59,12 +58,20 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
-              ]
+              ],
+              "localize": true
             },
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "localize": false
+            },
+            "en": {
+              "localize": ["en"]
+            },
+            "de": {
+              "localize": ["de"]
             }
           },
           "defaultConfiguration": "production"
@@ -77,6 +84,12 @@
             },
             "development": {
               "buildTarget": "template:build:development"
+            },
+            "en": {
+              "buildTarget": "template:build:development,en"
+            },
+            "de": {
+              "buildTarget": "template:build:development,de"
             }
           },
           "defaultConfiguration": "development"
