update i18n localization files

--- a/angular.json
+++ b/angular.json
@@ -95,7 +95,15 @@
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n"
+          "builder": "ng-extract-i18n-merge:ng-extract-i18n-merge",
+          "options": {
+            "buildTarget": "template:build",
+            "format": "xlf",
+            "outputPath": "src/locale",
+            "targetFiles": [
+              "messages.de.xlf"
+            ]
+          }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
