--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "karma-firefox-launcher": "^2.1.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-extract-i18n-merge": "^2.15.1",
     "typescript": "~5.6.2"
   }
 }
